# aoc24

./: .gitignore  Makefile  aoc24.opam  dune-project  get_input.sh  run_check.sh
lib/: aoc24.ml  dune  functional_helpers.ml  io_helpers.ml  math_helpers.ml  matrix.ml  number_helpers.ml  parser_helpers.ml  position.ml
